# ArreglosPaginados

./: CMakeLists.txt
comandos/: Comandos para ejecucion de codigo en terminal.txt
src/: PagedArray.cpp  PagedArray.h  bubbleSort.cpp  generator.cpp  generator.h  insertionSort.cpp  quicksort.cpp  sorter.cpp  sorter.h
